--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     </header>
     <section id="home" class="section">
         <h1>Welcome to Your 15-Day Interview Prep</h1>
-        <p>Let's craft a 15-day schedule to ensure you're well-prepared for your interview. We'll break it down into daily tasks covering all the areas mentioned. Each day will have a mix of theory, practical work, and interview prep.</p>
+        <p>Let's craft a 15-day schedule to ensure you're well-prepared for your interview.</p>
+            <p>We'll break it down into daily tasks covering all the areas mentioned.</p>
+            <p>Each day will have a mix of theory, practical work, and interview prep.</p>
     </section>
     <section id="about" class="section">
         <h2>About</h2>
+        <p>if you are a Fresh Full-Stack devloper, enjoy.</p>
         <div class="daily-routine-box">
             <h3>Daily Routine</h3>
             <table class="daily-routine-table">
