add changes to github repository always

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
     </section>
     <section id="rate" class="section">
         <h2>Rate Us</h2>
-        <div id="ratingSection">
-            <span class="fa fa-star" id="star1"></span>
-            <span class="fa fa-star" id="star2"></span>
-            <span class="fa fa-star" id="star3"></span>
-            <span class="fa fa-star" id="star4"></span>
-            <span class="fa fa-star" id="star5"></span>
-        </div>
+        <div class="rating">
+            <span class="star">&#x2605;</span>
+            <span class="star">&#x2605;</span>
+            <span class="star">&#x2605;</span>
+            <span class="star">&#x2605;</span>
+            <span class="star">&#x2605;</span>
+          </div>
     </section>
     <footer>
         <p>&copy; 2024 Interview Prep. by Munaza Hazrati</p>
